// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emotion primitives primitive should work with \`withComponent\` 1`] = `
<Text
  style={
    Array [
      80,
    ]
  }
>
  Mike
</Text>
`;

exports[`Emotion primitives should pass props in withComponent 1`] = `
<View
  style={
    Array [
      84,
    ]
  }
/>
`;

exports[`Emotion primitives should pass props in withComponent 2`] = `
<Text
  style={
    Array [
      84,
      Object {
        "color": "hotpink",
      },
    ]
  }
/>
`;

exports[`Emotion primitives should render <Image /> 1`] = `
<Image
  source={
    Object {
      "height": 150,
      "uri": "https://camo.githubusercontent.com/209bdea972b9b6ef90220c59ecbe66d35ffefa8a/68747470733a2f2f63646e2e7261776769742e636f6d2f746b6834342f656d6f74696f6e2f6d61737465722f656d6f74696f6e2e706e67",
      "width": 150,
    }
  }
  style={
    Array [
      85,
    ]
  }
/>
`;

exports[`Emotion primitives should render primitive with style prop 1`] = `
<Text
  style={
    Array [
      76,
      Object {
        "padding": 10,
      },
    ]
  }
>
  Emotion primitives
</Text>
`;

exports[`Emotion primitives should render the primitive on changing the props 1`] = `
<Text
  style={
    Array [
      75,
      Object {
        "color": "hotpink",
      },
    ]
  }
>
  Emotion Primitives
</Text>
`;

exports[`Emotion primitives should render the primitive when styles applied using object style notation 1`] = `
<Text
  style={
    Array [
      73,
      Object {
        "fontSize": 40,
      },
    ]
  }
>
  Emotion Primitives
</Text>
`;

exports[`Emotion primitives should style any other component 1`] = `
<Text
  style={
    Array [
      82,
    ]
  }
>
  Hello World
</Text>
`;

exports[`Emotion primitives should work with emotion-theming 1`] = `
<Text
  style={
    Array [
      74,
    ]
  }
>
  Hello World
</Text>
`;
